--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Discord Game Recruitment Bot",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node src/index.js",
     "dev": "nodemon index.js"
   },
   "dependencies": {
