--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "discord-bot",
   "version": "1.0.0",
-  "description": "Discord Game Recruitment Bot",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "discord.js": "^14.14.1",
