--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "nodemon": "^3.0.3",
+    "prettier": "^3.5.1"
   }
 }
