--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
-    "firebase-admin": "^13.1.0"
+    "firebase-admin": "^13.1.0",
+    "punycode": "^2.3.1"
   },
   "devDependencies": {
     "eslint-config-prettier": "^10.0.1",
