--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
     "firebase-admin": "^13.1.0",
